--- a/share/ui.rc
+++ b/share/ui.rc
@@ -1,4 +1,4 @@
-bitcoin               ICON    "pixmaps/paycoin.ico"
+bitcoin               ICON    "pixmaps/lendcoin.ico"
 
 #include "wx/msw/wx.rc"
 
