--- a/lendcoin-qt.desktop
+++ b/lendcoin-qt.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry]
 Encoding=UTF-8
-Name=Bitcoin
+Name=lendcoin
 Comment=Bitcoin P2P Cryptocurrency
 Comment[fr]=Bitcoin, monnaie virtuelle cryptographique pair à pair
 Comment[tr]=Bitcoin, eşten eşe kriptografik sanal para birimi
@@ -10,3 +10,4 @@ Type=Application
 Icon=/usr/share/pixmaps/bitcoin80.xpm
 MimeType=x-scheme-handler/bitcoin;
 Categories=Office;
+//CIMS
